--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,73 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      AIEE Members
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+<ion-content class="ion-padding">
+  <ion-item>
+    <ion-label position="floating">No of Members</ion-label>
+    <ion-input
+      type="number"
+      placeholder="Enter number between min:1 max:100"
+      min="1"
+      max="100"
+      [(ngModel)]="result"
+    ></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">page number</ion-label>
+    <ion-input
+      type="number"
+      min="1"
+      placeholder="Enter number Ex: 1"
+      [(ngModel)]="page"
+    ></ion-input>
+  </ion-item>
+  <ion-button (click)="getList()" shape="round">Get List</ion-button>
+  <ion-list>
+    <ion-item *ngFor="let Member of res">
+      <ion-card>
+        <ion-img [src]="Member.picture.large"></ion-img>
+        <ion-card-header>
+          <h4>
+            <b>
+              {{ Member.name.title }}. {{ Member.name.first }}
+              {{ Member.name.last }}</b
+            >
+          </h4>
+        </ion-card-header>
+        <ion-card-content>
+          <ion-item>
+            <ion-label><b>Registration Date:</b></ion-label>
+            <ion-datetime
+              display-format="MM/DD/YYYY"
+              [value]="Member.registered.date"
+            ></ion-datetime>
+          </ion-item>
+          <ion-item
+            ><ion-label
+              ><b
+                >Membership Duration: {{ Member.registered.age }}</b
+              ></ion-label
+            ></ion-item
+          >
+          <ion-item
+            ><ion-label>
+              Address:<br />
+              {{ Member.location.street }}<br />
+              {{ Member.location.city }}<br />
+              <b>{{ Member.location.state }}</b> {{ Member.location.postcode
+              }}<br />
+              <a>{{ Member.email }}</a
+              ><br />
+              <a>{{ Member.phone }}</a>
+            </ion-label></ion-item
+          >
+        </ion-card-content>
+      </ion-card>
+    </ion-item>
+  </ion-list>
 </ion-content>
